--- a/index.html
+++ b/index.html
@@ -15,17 +15,12 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
-    <style>
-      .navbar-toggler {
-        /* width: 50px; */
-        /* height: 47px; */
-        background-color: #ffffff;
-        color: white;
-      }
-    </style>
+   
+    
+    <link rel="stylesheet" href="style.css" >
   </head>
-  <body>
+  <body class="gapp">
+    <!-- Nav -->
     <nav
       class="navbar navbar-expand-lg navbar-light bg-dark"
       style="padding: 1% 5% 1% 5%"
@@ -64,5 +59,6 @@
         </div>
       </div>
     </nav>
+    
   </body>
 </html>
