About and footer section added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,56 @@
         </div>
       </div>
     </nav>
+    <!-- About -->
+    <div class="container2">
+        <div class="min-can">
+          <div class="pic">
+              <img src="logo/por5.jpg" alt="img">
+          </div>
+          <div class="content">
+              <h1>About Us</h1>
+            <p>
+              We are an India based Company made up of Security Professionals who
+              specialise in various fields of companies in India for their
+              Products and Services exclusively. ESD Networks India provides
+              innovative and technical security assistance to Intelligence and Law
+              Enforcement Agencies in India. We are an India based Company made up
+              of Security Professionals who specialise in various fields of
+              companies in India for their Products and Services exclusively. ESD
+              Networks India provides innovative and technical security assistance
+              to Intelligence and Law Enforcement Agencies in India. ESD Networks
+              India has been in this field for last more than 8 years and few
+              years back entered into Joint Venture with Government of Punjab,
+              Department of Home Affairs for setting up of World Class State of
+              the Art Canine Training and Breeding Institute.Our committees are devoted to creating a global focus on the control and mitigation of electrical overstress and electrostatics through certification, standards, education, and events. Composed of EOS/ESD experts from around the world, our committees are constantly creating opportunities to engage, recognize, develop, and advance the theory and practice of electrostatic discharge avoidance.</p>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- footer -->
+      <footer class="bg-dark gap">
+          <div class="container ">
+              <div class="row">
+                 
+                  <div class="col-md-6">
+                      <div class="container m-5">
+                          <p class="text-white fs-5">Links</p>
+                          <ul class="remove-bullets remove-text-decoration">
+                              <li><a href="#" class="text-white">About Us</a></li>
+                              <li><a href="#" class="text-white">Contact Us</a></li>
+                              <li><a href="#" class="text-white">T&C</a></li>
+  
+                          </ul>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="text-white text-center">
+                      <p>All rights reserved © 2023</p>
+                  </div>
+              </div>
+          </div>
+      </footer>
     
   </body>
 </html>
